Opened 18 years ago

Closed 18 years ago

#1308 closed bug (fixed)

[People] don't disappear from Deskbar on close

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/People Version: R1/pre-alpha1
Keywords: Cc: karma, kaoutsis
Blocked By: Blocking:
Platform: All

Description

People don't disappear from Deskbar on window close.

Attachments (2)

windowat_fix.diff (619 bytes ) - added by karma 18 years ago.
This fixes the bug. (also fixes Launchbox, and the WindowAt function in general)
src_apps_people_Jamfile.diff (506 bytes ) - added by kaoutsis 18 years ago.
src_apps_people_Jamfile.diff: buld People app for TARGET_PLATFORM=hrev5 also (this version is putting back the resources file)

Download all attachments as: .zip

Change History (8)

comment:1 by karma, 18 years ago

Cc: karma added

I've found that the following code leaves "count" at 0, so none of the windows are posting QUIT_REQUESTED to be_app in the end (PeopleWindow.cpp, line 201):

        while ((window = (TPeopleWindow *)be_app->WindowAt(index++))) {
                if (window->FindView("PeopleView"))
                        count++;
        }

I'm still debugging to find out what's happening behind the curtains.

comment:2 by korli, 18 years ago

Can you reproduce this on R5 too ? I would assume the People application is working OK on BeOS R5 and Haiku misbehaves here.

comment:3 by karma, 18 years ago

I don't have R5 at hand now, but neither does LaunchBox close when it should.

And it's because WindowAt doesn't work. There's a dynamic_cast<BWindow*> in _WindowAt in kits/app/Application.cpp, which should return a BWindow* pointer if it has found a window, but it always returns NULL.

I'm struggling to find an explanation for this - I was going to file a bug soon anyway.

in reply to:  2 comment:4 by kaoutsis, 18 years ago

Replying to korli:

Can you reproduce this on R5 too ? I would assume the People application is working OK on BeOS R5 and Haiku misbehaves here.

Tested with hrev21757 and i can confirm that People is working OK on hrev5; btw: i will attached the src_apps_people_Jamfile.diff that adds hrev5 support to People app.

comment:5 by kaoutsis, 18 years ago

Cc: kaoutsis added

by karma, 18 years ago

Attachment: windowat_fix.diff added

This fixes the bug. (also fixes Launchbox, and the WindowAt function in general)

by kaoutsis, 18 years ago

src_apps_people_Jamfile.diff: buld People app for TARGET_PLATFORM=hrev5 also (this version is putting back the resources file)

comment:6 by kaoutsis, 18 years ago

Resolution: fixed
Status: newclosed

Tested with hrev21803: it's fixed.

Note: See TracTickets for help on using tickets.