applied patch from Váradi Zsolt Gyula: fixes People's (#1308) and Launchbox's closing problem. Thanks.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21776 a95241bf-73f2-0310-859d-f6bbb57e9c96